# mcsm

./: .gitignore  README.md  pyproject.toml
docs/: ROADMAP.md
scripts/: test_fill_api.py
src/mcsm/: __about__.py  __main__.py  cli.py  config.py
src/mcsm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcsm/commands/: doctor.py  helpers.py  install.py  restart.py  status.py  stop.py
src/mcsm/models/: command.py  doctor.py  installer.py  server.py  systemd.py
src/mcsm/services/: command.py  doctor.py  download.py  filesystem.py  http.py  installer.py  paper.py  server.py  system.py  systemd.py  users.py
src/mcsm/templates/: minecraft.service
tests/: test_system.py
