[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mcsm"
version = "0.1.0"
description = "Minecraft Server Manager"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Rikard Persson" }
]

dependencies = [
    "typer",
    "rich"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mc = "mcsm.cli:app"